# stage_finder_seed

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
stage_finder/: main.py  models.py  settings.py  utils.py
stage_finder/langchain/: service.py  views.py
stage_finder/llama_index/: service.py  views.py
ui/: index.html  package.json  tailwind.config.js
ui/src/components/: HelloWorld.ts
ui/src/pages/: IndexPage.ts
