[tool.poetry]
name = "stage-finder"
version = "0.1.0"
description = ""
authors = ["Avishay Maor <avishay@maor.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"
langchain-openai = "^0.1.8"
langchain = "^0.2.3"
llama-index-llms-openai = "^0.1.22"
llama-index = "^0.10.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
